docs: add measured ZGC-vs-G1 + heap-headroom benchmark findings
Empirical results from the benchmark on a weak ULV box under heavy load:
ZGC clearly beat G1 (avg 19.5 vs 18.1 TPS, p5 15.0 vs 10.4; G1 hit a
multi-second Full GC freeze, min 0.8 TPS) — MC's chunk-loading allocation churn
makes G1 stall while ZGC stays concurrent. More heap headroom (6G->8G) also
lifted p5 TPS ~13->15. Backs the Java 25 + ZGC recommendation with data.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>